<resources>
    <string name="app_name">SailRightPlotter</string>

    <!--    <string name="next_mark">Next Mark</string>-->
    <!--    <string name="latitude_label">Latitude</string>-->
    <!--    <string name="longitude_label">Longitude</string>-->
    <!--    <string name="speed_label">Speed</string>-->
    <!--    <string name="heading_label">Heading</string>-->
    <!--    <string name="distance_label">Distance to Mark</string>-->
    <!--    <string name="bearing_label">Bearing to Mark</string>-->
    <!--    <string name="last_update_time_label">Time since last update</string>-->
    <!--    <string name="accuracy">Accuracy</string>-->
    <!--    <string name="time_to_mark_label">Time to Mark</string>-->

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="time">Time</string>
    <string name="eta">ETA</string>
    <string name="none">None</string>
    <string name="speed">Spd</string>
    <string name="heading">Heading</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="start">Start</string>
    <string name="sync">Sync</string>
    <string name="plus">+</string>
    <string name="minus">–</string>
    <string name="a_mark">A Mark</string>
    <string name="bearing">Bearing</string>>
    <string name="kts">Speed\nkts</string>
    <string name="kts_land">Speed kts</string>
    <string name="nm">nm</string>
    <string name="_105">-105</string>
    <string name="variance">Variance</string>
    <string name="dist_to_mark">Dist to Mark</string>
    <string name="distance">Dis</string>
    <string name="accuracy">Accuracy</string>
    <string name="m">- m</string>
    <string name="countdown">-15\'59\"</string>
    <string name="time_to_start">Time to Start</string>
    <string name="time_to_line">Time to Line</string>
    <string name="g_mark">G Mark</string>
    <string name="early_late">Early/Late</string>
    <string name="course_dist_unit">NM</string>
    <string name="clock_time">Time</string>
    <string name="race">Race</string>
    <string name="fin">Fin - </string>
    <string name="mark"> Mark</string>
    <string name="finished">FINISHED !!</string>
    <string name="start_mark">Start - </string>
    <string name="early">Early</string>
    <string name="late">Late</string>
    <string name="go">* GO ! *</string>

    <!-- Strings for settings -->
    <string name="hammer_spanner">Hammer and spanner</string>
    <string name="acceptable_start_time">Late for Start Time</string>
    <string name="prefs_default_start_time">prefs_default_start_time</string>
    <string name="default_start_time">Default Start Time</string>
    <string name="default_start_time_desc">Start time for countdown clock</string>
    <string name="prefs_bow_to_gps">prefs_bow_to_gps</string>
    <string name="bow_to_gps">Device Offset</string>
    <string name="bow_to_gps_desc">Distance from bow to the device in metres</string>
    <string name="prefs_speed_smooth">prefs_speed_smooth</string>
    <string name="speed_smooth">Speed Smoothing Factor</string>
    <string name="speed_smooth_desc">Number of readings used for average speed (1 - 20, Default = 4)</string>
    <string name="prefs_heading_smooth">prefs_heading_smooth</string>
    <string name="heading_smooth">Heading Smoothing Factor</string>
    <string name="heading_smooth_desc">Number of readings used for average heading (1 - 20, Default = 4)</string>
    <string name="prefs_proximity_dist">prefs_proximity_dist</string>
    <string name="proximity_dist">Proximity Alerts Distance</string>
    <string name="proximity_dist_desc">Distance from mark for arrival notification in metres (Default = 50)</string>
    <string name="prefs_auto_advance">prefs_auto_advance</string>
    <string name="auto_advance_mark">Auto Advance to Next Mark</string>
    <string name="auto_advance_mark_desc">Switch destination to next mark on proximity alert.
        Deactivation also deactivates proximity alarm</string>
    <string name="prefs_start_margin">prefs_start_margin</string>
    <string name="acceptable_start_margin">Late Start Margin</string>
    <string name="acceptable_start_margin_desc">Notification given if starting more than this many seconds after start time</string>
    <string name="switch_delta_bearing">Side Approach Bearing Margin</string>
    <string name="switch_delta_bearing_desc">If difference in bearings to A and H exceed this, then
        determine best start location, if less than this use nearest mark</string>
    <string name="prefs_mins_airhorn">prefs_mins_airhorn</string>
    <string name="minutes_airhorn">Start Sequence Minutes Alert</string>
    <string name="prefs_start_gun">prefs_start_gun</string>
    <string name="start_gun">Start Gun</string>
    <string name="prefs_mark_prox">prefs_mark_prox</string>
    <string name="mark_proximity">Mark Proximity Alert</string>
    <string name="prefs_finish">prefs_finish</string>
    <string name="finish_whoop">Cross Finish Line Alert</string>
    <string name="prefs_bad_start">prefs_bad_start</string>
    <string name="bad_start">Late Start Notification</string>
    <string name="prefs_max_bright">prefs_max_bright</string>
    <string name="max_bright">Maximum Brightness</string>
    <string name="restore_defaults">Restore default values</string>
    <string name="keep">Keep</string>
    <string name="settings_return">Go Back to Plotter</string>
    <string name="help_return">Go Back to Settings</string>
    <string name="prefs_ext_power">prefs_ext_power</string>
    <string name="ext_power_desc">Detect external power for auto start and shutdown. Gives warning when disconnected</string>
    <string name="ext_power">External Power Detection</string>
    <string name="prefs_orientation">prefs_orientation</string>
    <string name="orientation_desc">Select allowable screen orientations</string>
    <string name="orientation">Screen Orientation</string>
    <string name="prefs_division">prefs_division</string>
    <string name="division">Race Division</string>
    <string name="division_desc">Select division</string>
</resources>
