<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory android:title="Boat">

                <EditTextPreference
                    android:key="@string/prefs_bow_to_gps"
                    android:summary="@string/bow_to_gps_desc"
                    android:title="@string/bow_to_gps"
                    android:defaultValue="7" />

                <EditTextPreference
                    android:key="@string/prefs_speed_smooth"
                    android:summary="@string/speed_smooth_desc"
                    android:title="@string/speed_smooth"
                    android:defaultValue="4" />

                <EditTextPreference
                    android:key="@string/prefs_heading_smooth"
                    android:summary="@string/heading_smooth_desc"
                    android:title="@string/heading_smooth"
                    android:defaultValue="4" />

                <EditTextPreference
                    android:key="@string/prefs_proximity_dist"
                    android:summary="@string/proximity_dist_desc"
                    android:title="@string/proximity_dist"
                    android:defaultValue="50" />

                <SwitchPreference
                    android:defaultValue="true"
                    android:key="@string/prefs_auto_advance"
                    android:summary="@string/auto_advance_mark_desc"
                    android:title="@string/auto_advance_mark" />

        </PreferenceCategory>

        <PreferenceCategory android:title="Start">

        <EditTextPreference
            android:key="@string/prefs_default_start_time"
            android:summary="@string/default_start_time_desc"
            android:title="@string/default_start_time"
            android:defaultValue="15" />

        <EditTextPreference
            android:key="@string/prefs_start_margin"
            android:summary="@string/acceptable_start_margin_desc"
            android:title="@string/acceptable_start_margin"
            android:defaultValue="15"  />

        <EditTextPreference
            android:key="prefs_delta_bearing"
            android:summary="@string/switch_delta_bearing_desc"
            android:title="@string/switch_delta_bearing"
            android:defaultValue="15"  />

        </PreferenceCategory>

        <PreferenceCategory android:title="Notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_mins_airhorn"
            android:title="@string/minutes_airhorn" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_start_gun"
            android:title="@string/start_gun" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_mark_prox"
            android:title="@string/mark_proximity" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_finish"
            android:title="@string/finish_whoop" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_bad_start"
            android:title="@string/bad_start" />

        </PreferenceCategory>

        <PreferenceCategory android:title="Display">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_max_bright"
            android:title="@string/max_bright" />

        </PreferenceCategory>

        <PreferenceCategory android:title="Reset">
        <Preference android:title="Restore default values"
            android:summary=""
            android:key="@string/restore_defaults"/>
        </PreferenceCategory>

</PreferenceScreen>